[package]
name = "async_redis"
version = "0.1.0"
edition = "2021"
authors = ["liutao.rs <liutao.rs@bytedance.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Redis library for rust using tokio"

[dependencies]
atoi = "1.0"
byteorder = "1.4"
bytes = "1.1"
tokio = { version = "1.15", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1.15", default-features = false, features = ["macros", "rt"] }
